--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "App para seguir rutinas de gimnasio",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "cd public && npm install && cd ..",
   },
   "engines": {
     "node": "8.9.4",
