--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "cd public && npm install && cd ..",
+    "install": "cd public && npm install && cd .."
   },
   "engines": {
     "node": "8.9.4",
