--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "method-override": "^2.3.10",
-    "mongoose": "^5.2.1"
+    "mongoose": "^5.2.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^1.18.2"
