--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "cd public && npm i && npm run ng build --prod && cd .."
+    "install": "cd public && npm i @angular/cli -g && npm i && ng build --prod && cd .."
   },
   "engines": {
     "node": "8.9.4",
