--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "App para seguir rutinas de gimnasio",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app"
   },
   "engines": {
     "node": "8.9.4",
@@ -13,9 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "dotenv": "^6.1.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.4.0",
     "method-override": "^2.3.10",
     "mongoose": "^5.2.1",
     "path": "^0.12.7"
